--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tailwindcss -i ./css/input.css -o ./css/output.css --watch",
+   "build": "npx tailwindcss -i ./css/input.css -o ./css/output.css",
+
     "dev": "vite" 
   },
   "keywords": [],
